my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EVERS/EVERS.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\dml-1.2.dml:0: error EVERS: incompatible version (1.2) while compiling a 1.4 device
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EVERS.dml:8:1: imported here
